final fixes to chamber site plan - image alignment

--- a/week01/styles/siteplan-basic.css
+++ b/week01/styles/siteplan-basic.css
@@ -45,7 +45,15 @@ p {
     margin-top: 4rem;
 }
 
-img {
-    margin: 0;
-    padding: 0;
+.image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
